MAILIOS-2464: Fix the wrong color of dark mode in css

--- a/ProtonMail/ProtonMail/Resource/content.css
+++ b/ProtonMail/ProtonMail/Resource/content.css
@@ -8,9 +8,9 @@
 
 @media screen and (prefers-color-scheme: dark) {
   :root {
-      --text-color: {{proton-text-color}};
-      --bg-color: {{proton-background-color}};
-      --brand-color: {{proton-brand-color}};
+      --text-color: {{proton-text-color-dark}};
+      --bg-color: {{proton-background-color-dark}};
+      --brand-color: {{proton-brand-color-dark}};
   }
   a:link { color: var(--brand-color); }
 }
